--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="field-radio">
       <%= f.radio_button(:register2019, "jobfaironly") %>
-      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair only. (Note: Your resume is required in order to register you for the fair, but it will not be included in our online database or shared with hiring managers in advance of the Job Fair.)", class: 'flex-one') %>
+      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair only. (Note: Your resume is required to register you for the Job Fair, but we will not include it in our online database or share it with hiring managers if you select this option.)", class: 'flex-one') %>
     </div>
   </div>
 
@@ -100,7 +100,7 @@
   </div><br><br>
 
   <div class="field">
-    <label><em class="label-bold">How did you hear about the INCS Resume Bank? (Check all that apply) *</em></label><br>
+    <label><em class="label-bold">How did you hear about the INCS Teacher & Administrator Job Fair and/or INCS Resume Bank? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
       <% resume_bank_references.each do |source| %>
         <% if @user.sources.map{|source| source.source_name}.include?(source) %>
@@ -115,12 +115,12 @@
   <div class="field2">
     <input type="checkbox" name="sources[]" value=""/>
     <label>Flyer (Please specify where you saw/received it.)</label>
-    <input type="text" name="add-sources" value="" /><br>
+    <input type="text" name="add-flyer" value="" /><br>
   </div>
   <div class="field2">
     <input type="checkbox" name="sources[]" value=""/>
     <label>College/university jobs board, newsletter, or staff. (Please specify which one.)</label>
-    <input type="text" name="add-sources" value="" /><br>
+    <input type="text" name="add-college" value="" /><br>
   </div>
   <div class="field2">
     <input type="checkbox" name="sources[]" value=""/>
@@ -323,7 +323,7 @@
   <div class="field2">
     <input type="checkbox" name="subs[]" value=""/>
     <label>Foreign Language (Please specify language.)</label>
-    <input type="text" name="add-subs" value="" /><br>
+    <input type="text" name="add-language" value="" /><br>
   </div>
   <div class="field2">
     <input type="checkbox" name="subs[]" value=""/>
