--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,8 +46,8 @@ managers year-round.</li>
       <strong>Schools will have the opportunity to:</strong>
       <ul class="main-content-list">
         <li>Meet with hundreds of educators.</li>
-        <li>View candidates’ resumes ahead of time using the INCS Online Resume Bank.</li>
-        <li>Invite candidates for on-site interviews following the meet-and-greet portion of the event.</li>
+        <li>View job seekers’ resumes ahead of time using the INCS Online Resume Bank.</li>
+        <li>Invite candidates for on-site interviews following the Meet and Greet session, if you wish.</li>
         <%# <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a></li> %>
       </ul>
     </p>
@@ -56,12 +56,12 @@ managers year-round.</li>
     <ul class="main-content-list">
       <li>9:00 am - 9:30 am: School Set-up</li>
       <li>9:15 am - 10:00 am: Job Seeker Registration</li>
-      <li>10:00 am - 12:00 pm: Meet-and-Greet between Job Seekers and Schools</li>
+      <li>10:00 am - 12:00 pm: Meet and Greet between Job Seekers and Schools</li>
       <li>12:00 pm - 1:30 pm: On-site Interviews (by invitation from charter school leaders only*)</li>
     </ul>
 
     <p class="main-content">
-    *Interviews are conducted at the discretion of charter school leaders, who may contact job seekers in advance or invite them in person at the fair. INCS does not have any additional information regarding interviews.
+    *Interviews are conducted at the discretion of charter school leaders, who may contact job seekers in advance or invite them in person at the fair. INCS has no additional information about interviews.
     </p>
 
     <p class="main-content"><strong>Location:</strong></p>
