--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -17,41 +17,41 @@
 
   <h4 class="register-content-list">Access the INCS Resume Bank</h4>
   <ul class="register-content-list">
-    <li><strong>New Users:</strong> INCS member schools may register below. Verification and approval of your account may take up to two business days following registration. <strong>Only INCS member schools and other Illinois charters are able to register and, at the discretion of INCS, be granted access.</strong></li>
-    <li><strong>Returning users:</strong> please click here to log in.</li>
+    <li><strong>New Users:</strong> INCS member schools may register below. Verification and approval of your account may take up to a week following registration. <strong>Only INCS member schools and other Illinois charters are able to register and, at the discretion of INCS, be granted access.</strong></li>
+    <li><strong>Returning users:</strong> please click here to <a href="/sessions/new">log in</a>.</li>
   </ul>
    <br>
   <%= f.hidden_field :access, value: "pending" %>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :first_name %></em>
+  <em class="teacher-label"><%= f.label(:name, 'First name *')%></em>
     <%= f.text_field :first_name, size: 45 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :last_name %></em>
+  <em class="teacher-label"><%= f.label(:name, 'Last name *')%></em>
     <%= f.text_field :last_name, size: 45 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :job_title%></em>
+  <em class="teacher-label"><%= f.label(:name, 'Job title *')%></em>
     <%= f.text_field :job_title, size: 45 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :school %></em>
+  <em class="teacher-label"><%= f.label(:name, 'School *')%></em>
     <%= f.text_field :school, size: 60 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label(:name, 'Email (Please use work email to speed verification process.)')%></em>
+  <em class="teacher-label"><%= f.label(:name, 'Email (Please use work email to speed verification process.) *')%></em>
     <%= f.text_field :email, size: 45 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :email_confirmation %></em>
+  <em class="teacher-label"><%= f.label(:name, 'Confirm email *')%></em>
     <%= f.text_field :email_confirmation, size: 45 %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :password %></em>
+  <em class="teacher-label"><%= f.label(:name, 'Password *')%></em>
     <%= f.password_field :password %><br>
   </div>
   <div class="field field-flex">
-  <em class="teacher-label"><%= f.label :password_confirmation %></em>
+  <em class="teacher-label"><%= f.label(:name, 'Confirm password *')%></em>
     <%= f.password_field :password_confirmation %><br>
   </div>
 
