--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @user, url: '/users/new_school' do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= "Error".pluralize(@user.errors.count) %> prohibited this user from being saved:</h2>
 
       <ul>
       <% @user.errors.messages.each do |message| %>
