Add new license documentation

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -158,7 +158,7 @@
     <div class="field-radio">
       <%= f.radio_button(:il_licensed, "Other") %>
       <%= f.label(:name, "I am licensed in another state.")%>
-      <%# <%= link_to "Click here for Illinois license information", "/uploads/licCheatSheet.pdf" %1> %>
+      <%= link_to "Click here for Illinois license information", "/uploads/licCheatSheet.pdf" %>
     </div>
     <div class="field-radio">
       <%= f.radio_button(:il_licensed, "Educator Prep Program") %>
