--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -1,10 +1,8 @@
 Dear <%=@user.first_name%>,
 
-Thank you for using INCS’s Online Resume Bank. Your information has been received.
+Thank you for using the INCS Online Resume Bank. Your profile information and resume have been received and are now searchable by charter school hiring managers. Please keep your username and password for your records. You can log into your account at any time to update or delete any part of your profile. If you need any assistance using our database, please contact me at the information below.
 
-Please keep your username and password for your records. You can log into your account at any time to upload, edit, or delete any part of your profile.
-
-If you need any assistance using our database, please do not hesitate to contact me at the information below.
+In order to further increase the likelihood of securing a position in an Illinois charter public school, we recommend that you also use the INCS Jobs Board to identify positions of interest and submit applications directly to schools. For more information about charter public schools, please visit www.incschools.org.
 
 Best,
 
