--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -10,7 +10,7 @@
     </p>
 
     <p>
-    With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.
+    With your account, you can search for job seekers that meet your team's needs, browse job seeker profiles, view and download resumes, and download spreadsheets of all job seekers who meet your search criteria.
     </p>
 
     <p>
