--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -2,7 +2,7 @@ Dear <%= @user.first_name %> <%= @user.last_name %>
 
 Your registration has been approved, and you can now access the INCS Resume Bank at www.teacherjobfair.org.
 
-With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.
+With your account, you can search for job seekers that meet your team's needs, browse job seeker profiles, view and download resumes, and download spreadsheets of all job seekers who meet your search criteria.
 
 If you need any assistance using our database, or if you have any feedback about the site, please do not hesitate to contact me at the information below.
 
