--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -82,7 +82,7 @@
   </div>
 
   <div class="field field-flex">
-    <em class="teacher-label"><%= f.label(:name, "Zip Code *") %></em>
+    <em class="teacher-label"><%= f.label(:name, "Zip Code") %></em>
     <%= f.text_field :zip, class: 'tiny-field' %>
   </div>
 
