Make other fields viable options

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -116,17 +116,17 @@
     </ul>
   </div>
   <div class="field2">
-    <input type="checkbox" name="sources[]" value=""/>
+    <input type="checkbox" name="sources[]" value="Flyer"/>
     <label>Flyer (Please specify where you saw/received it.)</label>
     <input type="text" name="add-flyer" value="" /><br>
   </div>
   <div class="field2">
-    <input type="checkbox" name="sources[]" value=""/>
+    <input type="checkbox" name="sources[]" value="College/University Jobs Board, Newsletter, or staff"/>
     <label>College/university jobs board, newsletter, or staff. (Please specify which one.)</label>
     <input type="text" name="add-college" value="" /><br>
   </div>
   <div class="field2">
-    <input type="checkbox" name="sources[]" value=""/>
+    <input type="checkbox" name="sources[]" value="Other"/>
     <label>Other (Please specify so that we may thank our partners.)</label>
     <input type="text" name="add-sources" value="" /><br>
   </div>
@@ -201,7 +201,7 @@
       <% end %>
     <% end %>
     <div class="field-radio-indent">
-      <input type="checkbox" name="licenses[]" value=""/>
+      <input type="checkbox" name="licenses[]" value="Other"/>
       <label>Other (if multiple, separate with a comma)</label>
       <input type="text" name="add-licenses" value="" />
     </div>
@@ -239,7 +239,7 @@
     <% end %>
   </div>
   <div class="field-radio-indent-other">
-    <input type="checkbox" name="endorses[]" value=""/>
+    <input type="checkbox" name="endorses[]" value="Other"/>
     <label>Other (if multiple, separate with a comma)</label>
     <input type="text" name="add-endorses" value="" />
   </div><br>
@@ -304,7 +304,7 @@
     </ul>
   </div>
   <div class="field2">
-    <input type="checkbox" name="positions[]" value=""/>
+    <input type="checkbox" name="positions[]" value="Other"/>
     <label>Other (if multiple, separate with a comma)</label>
     <input type="text" name="add-positions" value="" />
   </div>
@@ -329,7 +329,7 @@
     <input type="text" name="add-language" value="" /><br>
   </div>
   <div class="field2">
-    <input type="checkbox" name="subs[]" value=""/>
+    <input type="checkbox" name="subs[]" value="Other"/>
     <label>Other (if multiple, separate with a comma)</label>
     <input type="text" name="add-subs" value="" /><br>
   </div>
