Add hyperlinks to addresses on main page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -66,8 +66,8 @@ managers year-round.</li>
 
     <p class="main-content"><strong>Location:</strong></p>
     <p class="main-content">
-    ITW David Speer Academy, a campus of the Noble Network of Charter Schools<br>
-    5321 W. Grand Ave<br> Chicago, IL 60639
+    <a href="https://nobleschools.org/speer/">ITW David Speer Academy, a campus of the Noble Network of Charter Schools</a><br>
+    <a href="https://www.google.com/maps/place/5321+W+Grand+Ave,+Chicago,+IL+60639/@41.9170545,-87.7623176,17.75z/data=!4m5!3m4!1s0x880fccbe24f9db4d:0x643ae861c8b1c78c!8m2!3d41.9172487!4d-87.759881">5321 W. Grand Ave</a><br> Chicago, IL 60639
     </p>
 
     <p class="main-content"><strong>Parking:</strong></p>
