--- a/app/views/user_mailer/school_email.text.erb
+++ b/app/views/user_mailer/school_email.text.erb
@@ -1,8 +1,8 @@
 Dear <%= @user.first_name %> <%= @user.last_name%>,
 
-Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 3 business days for INCS staff to review and process approval of your account. If delayed, please contact me directly at the email below.
+Thank you for your interest in the INCS Resume Bank! Your registration has been received and is under review by INCS. Once we have verified that your school is an INCS Member School in good standing, you will receive notification of account approval. Please allow up to one week for processing. Only Illinois charter public schools (or INCS member contract schools) may access the INCS Resume Bank. If your school is an Illinois charter but not a current INCS Member School, please feel free to contact me to discuss membership.<br> 
 
-Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at www.teacherjobfair.org. If you forget your password, you may reset it here: www.teacherjobfair.org/sessions/new.
+Once approved, you will receive a confirmation email and will be able to search for job seekers and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at www.teacherjobfair.org. If you forget your password, you may reset it here: www.teacherjobfair.org/sessions/new.
 
 Please let me know if you have any questions.
 
