Remove sidebar unless logged in as job seeker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <%= image_tag("banner.jpg", width:"100%") %>
     </div>
     </nav>
-    <% if !session[:user_id] || (session[:user_id] && User.find(session[:user_id]).access == "teacher") %>
+    <% if session[:user_id] && User.find(session[:user_id]).access == "teacher" %>
       <div class="home-main-container">
         <div class="container" style="padding-top:80px;">
           <%= yield %>
