Fix search style

--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -18,7 +18,7 @@
   </div><br>
 
   <div class="field7">
-    <em><%= label_tag(:name, "Only show job seekers with previous charter experience?") %></em>
+    <em><%= label_tag(:name, "Only show job seekers with previous charter experience?") %></em><br>
     <%= radio_button_tag(:previous, "Yes") %>
     <%= label_tag(:name, "Yes") %><br>
     <%= radio_button_tag(:previous, "No") %>
