Add register button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@ managers year-round.</li>
         <li>Meet with hundreds of educators.</li>
         <li>View job seekers’ resumes ahead of time using the INCS Online Resume Bank.</li>
         <li>Invite candidates for on-site interviews following the Meet and Greet session, if you wish.</li>
-        <%# <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a></li> %>
+        <li>School leaders may learn more about the fair and register <a target="_blank" href="https://events.eventzilla.net/e/incs-teacher--administrator-job-fair-2019-2138732584">here</a></li>
       </ul>
     </p>
 
