--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -143,7 +143,7 @@
 
   <div class="field">
     <em class="label-bold">
-    <%= f.label(:name, "Are you licensed to teach in Illinois? *") %></em><br>
+    <%= f.label(:name, "Do you hold an educator's license in Illinois? *") %></em><br>
     <div class="field-radio">
       <%= f.radio_button(:il_licensed, "Yes") %>
       <%= f.label(:name, "Yes") %><br>
