--- a/app/views/users/teachers_index.html.erb
+++ b/app/views/users/teachers_index.html.erb
@@ -1,9 +1,9 @@
 <ul class="admin-buttons-list">
   <li class="admin-button">
     <% if @filter == 'bank-only' %>
-      <a href="/users/teachers/?filter=bank-only"><button class="btn btn-info btn-active">Resume Bank Only</button></a>
+      <a href="/users/teachers/?filter=bank-only"><button class="btn btn-info btn-active">Resume Bank Only 2018-2019</button></a>
     <% else %>
-      <a href="/users/teachers/?filter=bank-only"><button class="btn btn-info">Resume Bank Only</button></a>
+      <a href="/users/teachers/?filter=bank-only"><button class="btn btn-info">Resume Bank Only 2018-2019</button></a>
     <% end %>
   </li>
   <li class="admin-button">
