Add resources on main page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
             <li>
               <%= link_to "Illinois Educator Licensure Guide", "/uploads/licCheatSheet.pdf" %>
             </li>
+            <li>
+              <%= link_to "Teaching in Charter Schools FAQ", "/uploads/faq.pdf" %>
+            </li>
           </ul>
         </div>
       </div>
