--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,12 +36,25 @@
     <p class="main-content">
       <strong>Job Seekers will have the opportunity to:</strong>
       <ul class="main-content-list">
-        <li>Meet recruiters from over 50 charter public schools.</li>
+        <li>Meet recruiters representing over 100 charter public school campuses.</li>
         <li>Post your resume in the INCS Online Resume Bank, which is circulated to Illinois charter school hiring
 managers year-round.</li>
         <li>Interview on-site with schools looking to hire exceptional talent.*</li>
       </ul>
     </p>
+
+    <p class="main-content">
+      <strong>Job Seeker Resources:</strong>
+      <ul class="main-content-list">
+        <li>
+          <%= link_to "Teaching in Charter Schools FAQ (Frequently Asked Questions)", "/uploads/faq.pdf" %>
+        </li>
+        <li>
+          <%= link_to "Illinois Educator Licensure Guide", "/uploads/licCheatSheet.pdf" %>
+        </li>
+      </ul>
+    </p>
+
 
     <p class="main-content">
       <strong>Schools will have the opportunity to:</strong>
