--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,7 +47,7 @@ managers year-round.</li>
       <strong>Job Seeker Resources:</strong>
       <ul class="main-content-list">
         <li>
-          <%= link_to "Teaching in Charter Schools FAQ (Frequently Asked Questions)", "/uploads/faq.pdf" %>
+          <%= link_to "Teaching in Charter Schools FAQ (Frequently Asked Questions)", "/faq" %>
         </li>
         <li>
           <%= link_to "Illinois Educator Licensure Guide", "/uploads/licCheatSheet.pdf" %>
