--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
               <%= link_to "Illinois Educator Licensure Guide", "/uploads/licCheatSheet.pdf" %>
             </li>
             <li>
-              <%= link_to "Teaching in Charter Schools FAQ", "/faq" %>
+              <%= link_to "Teaching in Charter Schools FAQ", "/uploads/FAQ.pdf" %>
             </li>
           </ul>
         </div>
