Add event tracking code for registrations

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,10 @@
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-71948481-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+<script>
+  window.addEventListener('load', function(){
+    if(jQuery('.alert-info:contains("Your registration is complete. Please review your information below.")').is(':visible')){
+      gtag('event', 'submit', {
+        'event_category' : 'form',
+        'event_label' : 'job seeker'
+      });
+    }
+  });
 </script>
